--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
- 
+/******************** ESTILOS CSS3 ********************/
+
+/******************** GENERALES ********************/
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/******************** RESPONSIVE ********************/
